# mcp-tools

./: README.md  README_zh.md
servers/acr-mcp-server/: .env.example  README.md  pyproject.toml
servers/acr-mcp-server/src/acr_mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py
servers/acr-mcp-server/src/acr_mcp_server/tools/: __init__.py
servers/jenkins-mcp-server/: .env.example  .mcp.json  README.md  package.json
servers/jenkins-mcp-server/src/: jenkins-client.mjs  server.mjs
servers/prometheus-mcp-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
servers/prometheus-mcp-server/config/: config.yaml.example  test-config.yaml
servers/prometheus-mcp-server/src/prometheus_mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py
servers/prometheus-mcp-server/src/prometheus_mcp_server/tools/: __init__.py
